--- a/tmu.html
+++ b/tmu.html
@@ -5,18 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TMU Dashboard</title>
 <style>
-  body { font-family: monospace; margin:0; background-color:#0a0a0a; color:#fff; }
+  body { 
+    font-family: monospace; 
+    margin:0; 
+    background-color:#0a0a0a; 
+    color:#fff; 
+    overflow-y:auto; /* enable scrolling */
+  }
   header { display:flex; justify-content:space-between; align-items:center; background-color:#1f1f1f; padding:1rem; border-bottom:2px solid #444; }
   header h1 { font-size:1.8rem; margin:0; }
   #userInfo { font-weight:bold; }
   #logoutBtn { padding:0.4rem 1rem; background-color:#ff0000; color:#fff; border-radius:5px; border:none; cursor:pointer; }
   #logoutBtn:hover { background-color:#cc0000; }
 
-  #activeSplit { width:100%; max-width:600px; display:block; margin:1rem auto; border:2px solid #4ade80; border-radius:5px; }
+  /* Keep the image natural, no stretching */
+  #activeSplit { 
+    width: 100%; 
+    max-width: 600px; 
+    display: block; 
+    margin: 1rem auto; 
+    border: 2px solid #4ade80; 
+    border-radius: 5px; 
+    height: auto; /* maintain aspect ratio */
+  }
 
-  #tmuBox { margin:1rem; padding:1rem; border:2px solid #4ade80; border-radius:8px; background-color:#1f1f1f; max-height:400px; overflow-y:auto; }
+  #tmuBox { margin:1rem auto; padding:1rem; border:2px solid #4ade80; border-radius:8px; background-color:#1f1f1f; max-width:600px; max-height:400px; overflow-y:auto; }
   #tmuBox div { padding:0.25rem 0; border-bottom:1px solid #333; }
-  #tmuInput { width:100%; padding:0.5rem; font-size:1rem; margin-top:0.5rem; background-color:#0a0a0a; color:#fff; border:2px solid #4ade80; border-radius:5px; }
+  #tmuInput { width:100%; padding:0.5rem; font-size:1rem; margin-top:0.5rem; background-color:#0a0a0a; color:#fff; border:2px solid #4ade80; border-radius:5px; display:block; }
   #sendBtn, #clearBtn { padding:0.4rem 1rem; font-weight:bold; margin-top:0.5rem; border:none; border-radius:5px; cursor:pointer; }
   #sendBtn { background-color:#00ff00; color:#000; }
   #sendBtn:hover { background-color:#00cc00; }
@@ -38,12 +53,17 @@
   </div>
 </header>
 
-<img id="activeSplit" src="https://i.ibb.co/4Zs2WdDN/3-HIGH.png" alt="Active Split">
+<!-- Active Split Image -->
+<img id="activeSplit" src="https://i.ibb.co/x8XKMM8y/image.png" alt="Active Split">
 
+<!-- TMU Box and Input directly under the image -->
 <div id="tmuBox"></div>
 <input type="text" id="tmuInput" placeholder="Enter TMU message here...">
 <button id="sendBtn">Send</button>
 <button id="clearBtn">Clear</button>
+
+<!-- Spacer to allow scrolling below TMU input -->
+<div style="height:600px;"></div>
 
 <div class="footer">
   <a href="index.html">SIA</a>
@@ -85,19 +105,16 @@
   if(!position || !initials) { alert("Please login first."); window.location.href="index.html"; }
   userInfo.textContent = `${position} (${initials})`;
 
-  logoutBtn.addEventListener("click", ()=>{
-    localStorage.clear();
-    window.location.href="index.html";
-  });
+  logoutBtn.addEventListener("click", ()=>{ localStorage.clear(); window.location.href="index.html"; });
 
   const canEdit = allowedPositions.includes(position) || allowedIns.includes(initials);
-  if(!canEdit){
-    tmuInput.disabled = true;
-    sendBtn.disabled = true;
-    clearBtn.disabled = true;
-  }
+  if(!canEdit){ tmuInput.disabled = true; sendBtn.disabled = true; clearBtn.disabled = true; }
 
-  // Firebase live TMU messages
+  // Disable copy/paste/cut
+  tmuInput.addEventListener('copy', e => e.preventDefault());
+  tmuInput.addEventListener('paste', e => e.preventDefault());
+  tmuInput.addEventListener('cut', e => e.preventDefault());
+
   const messagesRef = db.ref('tmuMessages');
   messagesRef.on('value', snapshot=>{
     const msgs = snapshot.val() || [];
@@ -110,20 +127,14 @@
     tmuBox.scrollTop = tmuBox.scrollHeight;
   });
 
-  // Send message
   sendBtn.addEventListener('click', ()=>{
     const msg = tmuInput.value.trim();
     if(msg){
-      messagesRef.push({
-        text: msg,
-        sender: `${position}(${initials})`,
-        timestamp: Date.now()
-      });
+      messagesRef.push({ text: msg, sender: `${position}(${initials})`, timestamp: Date.now() });
       tmuInput.value = '';
     }
   });
 
-  // Clear messages
   clearBtn.addEventListener('click', ()=>{
     if(canEdit && confirm("Are you sure you want to clear all TMU messages?")){
       messagesRef.remove();
