--- a/pireps.html
+++ b/pireps.html
@@ -76,17 +76,36 @@ header h1 { font-size: 1.8rem; margin:0; }
   padding: 1rem;
   display:flex;
   flex-direction: column;
-  gap:0.5rem;
+  gap:1rem;
   overflow-y: auto;
 }
 .pirep-item {
-  border:1px solid #444;
-  padding:0.5rem;
-  border-radius:5px;
-  background-color:#1f1f1f;
-  word-wrap: break-word;
+  background: linear-gradient(145deg, #1c1c1c, #111);
+  border: 1px solid #333;
+  padding: 1rem 1.2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+  transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
-.pirep-item span { display:block; }
+.pirep-item:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.6);
+}
+.pirep-item span {
+  display:block;
+  margin-bottom:0.35rem;
+  font-size:1.05rem;
+}
+.pirep-item strong {
+  color:#4ecdc4;
+  font-size:1.1rem;
+}
+.pirep-item em {
+  font-style: normal;
+  color:#aaa;
+  font-size:0.9rem;
+  margin-left:0.4rem;
+}
 
 /* Footer */
 .footer {
@@ -157,7 +176,24 @@ header h1 { font-size: 1.8rem; margin:0; }
   <a href="brief.html">BRIEF</a>
 </div>
 
-<script>
+<!-- Firebase -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getFirestore, collection, addDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+// FIREBASE CONFIG
+const firebaseConfig = {
+  apiKey: "AIzaSyBQhVG2_qIDV1R-fYuKkNdWxGriVImW5xs",
+  authDomain: "zauids.firebaseapp.com",
+  projectId: "zauids",
+  storageBucket: "zauids.appspot.com",
+  messagingSenderId: "903788512771",
+  appId: "1:903788512771:web:562b3abc452bf378b4b036"
+};
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const pirepsCol = collection(db, "pireps");
+
 // USER INFO
 const userInfo = document.getElementById("userInfo");
 const logoutBtn = document.getElementById("logoutBtn");
@@ -178,19 +214,9 @@ logoutBtn.addEventListener("click", ()=>{
 });
 updateUser();
 
-// PERSISTENCE
-let pireps = JSON.parse(localStorage.getItem("pireps")||"[]");
-
-// Remove old (>3h) PIREPs
-function removeOldPireps(){
-  const now = Date.now();
-  pireps = pireps.filter(p => now - p.timestamp < 3*60*60*1000);
-  localStorage.setItem("pireps", JSON.stringify(pireps));
-}
-
 // DISPLAY
+let pireps = [];
 function displayPireps(){
-  removeOldPireps();
   const list = document.getElementById("pirepList");
   list.innerHTML = "";
   const sorted = pireps.sort((a,b)=>{
@@ -217,12 +243,10 @@ function displayPireps(){
     `;
     list.appendChild(div);
   });
-  localStorage.setItem("pireps", JSON.stringify(pireps));
 }
-displayPireps();
 
 // FORM SUBMISSION
-document.getElementById("pirepForm").addEventListener("submit", e=>{
+document.getElementById("pirepForm").addEventListener("submit", async e=>{
   e.preventDefault();
   const p = {
     uauua: document.getElementById("uauua").value,
@@ -240,14 +264,17 @@ document.getElementById("pirepForm").addEventListener("submit", e=>{
     timestamp: Date.now()
   };
   if(!p.uauua||!p.ov||!p.tm||!p.fl||!p.tp){ alert("Fields 1-5 are mandatory."); return; }
-  pireps.push(p);
-  localStorage.setItem("pireps", JSON.stringify(pireps));
-  displayPireps();
+  await addDoc(pirepsCol, p);
   document.getElementById("pirepForm").reset();
 });
 
-// Auto-refresh
-setInterval(displayPireps, 60*1000);
+// REALTIME SYNC
+const q = query(pirepsCol, orderBy("timestamp", "desc"));
+onSnapshot(q, snapshot=>{
+  pireps = [];
+  snapshot.forEach(docSnap => pireps.push(docSnap.data()));
+  displayPireps();
+});
 </script>
 
 </body>
